--- a/index.html
+++ b/index.html
@@ -20,28 +20,30 @@
     <!-- шапка -->
     <header class="header">
       <div class="container">
-        
-          <a href="./index.html" class="logo"
+        <nav class="nav">
+          <a href="/" class="logo"
             ><span class="logo__color">Web</span>Studio
           </a>
-          <nav class="nav">
+          <button class="nav__button" type="button" modal-header-open>
+            <svg width="40" height="40">
+              <use href="./img/symbol-defs.svg#menu-icon"></use>
+            </svg>
+          </button>
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="./index.html" class="nav__link nav__link-active">Студія</a>
+              <a href="./index.html" class="nav__link nav__link-active"
+                >Студія</a
+              >
             </li>
             <li class="nav__item">
-              <a
-                href="./pages/portfolio.html"
-                class="nav__link"
-                >Портфоліо</a
-              >
+              <a href="./peges/portfolio.html" class="nav__link">Портфоліо</a>
             </li>
             <li class="nav__item">
               <a href="#contacts" class="nav__link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="contacts" data-aos="fade-down-left">
+        <ul class="contacts">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
@@ -59,21 +61,73 @@
             </a>
           </li>
         </ul>
+        <div class="mob-menu backdrop is-hidden" header-modal>
+          <div class="container">
+            <button type="button" class="btn-close" modal-header-close>
+              <svg class="modal-close-icon" width="40" height="40">
+                <use href="./img/symbol-defs.svg#icon-close"></use>
+              </svg>
+            </button>
+            <ul class="mob-menu-list">
+              <li class="mob-menu-list__item">
+                <a href="./index.html" class="mob-menu-list__link">Студия</a>
+              </li>
+              <li class="mob-menu-list__item">
+                <a href="./pages/portfolio.html" class="mob-menu-list__link"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mob-menu-list__item">
+                <a href="" class="mob-menu-list__link">Контакты</a>
+              </li>
+            </ul>
+            <ul class="mob-menu-contacts">
+              <li class="mob-menu-contacts__item">
+                <a
+                  href=""
+                  class="mob-menu-contacts__link mob-menu-contacts__link_size_big"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+              <li class="mob-menu-contacts__item">
+                <a
+                  href=""
+                  class="mob-menu-contacts__link mob-menu-contacts__link_size_small"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mob-menu-social">
+              <li class="mob-menu-social__item">
+                <a href="" class="mob-menu-social__link">Instagram</a>
+              </li>
+              <li class="mob-menu-social__item">
+                <a href="" class="mob-menu-social__link">Twitter</a>
+              </li>
+              <li class="mob-menu-social__item">
+                <a href="" class="mob-menu-social__link">Facebook</a>
+              </li>
+              <li class="mob-menu-social__item">
+                <a href="" class="mob-menu-social__link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- основной контент -->
     <main>
       <!-- секция герой -->
-      <!-- <section class="hero" data-aos="fade-left">
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__button" data-modal-open>
             Замовити послугу
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- почему мы -->
-      <!-- <section class="benefits" data-aos="fade-down-left">
+     <section class="benefits" >
         <div class="container">
           <h2 class="benefits__uptitle visually-hidden">Почему мы</h2>
           <ul class="benefits__list">
@@ -126,9 +180,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
       <!-- чем мы занимаемся -->
-      <!-- <section class="work" data-aos="fade-down-left">
+      <section class="work" >
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -152,9 +206,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- наша команда -->
-      <!-- <section class="team" data-aos="fade-down-left">
+      <section class="team" >
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -345,10 +399,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
-
-      <!-- наши клиенты -->
-      <!-- <section class="clients" data-aos="fade-down-left">
+      </section> 
+ 
+       <!-- наши клиенты  -->
+ <section class="clients" >
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
@@ -397,9 +451,9 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main> 
     <!-- подвал -->
-    <!-- <footer data-aos="fade-down-left">
+    <footer >
       <div class="container">
         <div class="footer-section">
           <a href="/" class="logo__footer"
@@ -474,10 +528,9 @@
           </form>
         </div>
       </div>
-    </footer> -->
-
+    </footer>
     <!-- модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <p class="modal__description">Залиште свої дані, ми вам передзвонимо</p>
         <form class="modal__form">
@@ -541,12 +594,9 @@
           </svg>
         </button>
       </div>
-    </div> -->
-    <!-- <script src="./js/modal-header.js"></script>
+    </div> 
+<script src="./js/modal-header.js"></script>
     <script src="./js/modal.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script> -->
   </body>
 </html>
