--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </a>
           <button class="nav__button" type="button" modal-header-open>
             <svg width="40" height="40">
-              <use href="./img/symbol-defs.svg#menu-icon"></use>
+              <use href="./img/symbol-defs.svg#icon-menu"></use>
             </svg>
           </button>
           <ul class="nav__list">
@@ -36,7 +36,7 @@
               >
             </li>
             <li class="nav__item">
-              <a href="./peges/portfolio.html" class="nav__link">Портфоліо</a>
+              <a href="./pages/portfolio.html" class="nav__link">Портфоліо</a>
             </li>
             <li class="nav__item">
               <a href="#contacts" class="nav__link">Контакти</a>
@@ -47,7 +47,7 @@
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
-                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                <use href="./img/symbol-defs.svg#icon-envelope-1"></use>
               </svg>
               <span class="contacts__text">info@devstudio.com</span>
             </a>
@@ -579,7 +579,7 @@
               />
               <span class="modal__check">
                 <svg class="modal__ico" width="11" height="8">
-                  <use href="./img/symbol-defs.svg#icon-vector"></use>
+                  <use href="./img/symbol-defs.svg#icon-Vector"></use>
                 </svg>
               </span>
               <span> Погоджуюся з розсилкою та приймаю </span>
