--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,12 +18,17 @@
   </head>
   <body>
     <!-- шапка -->
-    <header class="header" data-aos="fade-down-left">
+    <header class="header">
       <div class="container">
         <nav class="nav">
           <a href="../index.html" class="logo"
             ><span class="logo__color">Web</span>Studio
           </a>
+          <button class="nav__button" type="button" data-modal-open>
+            <svg width="40" height="40">
+              <use href="../img/symbol-defs.svg#icon-menu"></use>
+            </svg>
+          </button>
           <ul class="nav__list">
             <li class="nav__item">
               <a href="../index.html" class="nav__link">Студія</a>
@@ -40,11 +45,11 @@
             </li>
           </ul>
         </nav>
-        <ul class="contacts" data-aos="fade-down-left">
+        <ul class="contacts">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
-                <use href="../img/symbol-defs.svg#icon-envelope"></use>
+                <use href="../img/symbol-defs.svg#icon-envelope-1"></use>
               </svg>
               <span class="contacts__text">info@devstudio.com</span>
             </a>
@@ -58,10 +63,64 @@
             </a>
           </li>
         </ul>
+        <div class="mob-menu backdrop is-hidden" data-modal>
+          <div class="container">
+            <button type="button" class="btn-close" data-modal-close>
+              <svg class="modal-close-icon" width="40" height="40">
+                <use href="../img/symbol-defs.svg#icon-close"></use>
+              </svg>
+            </button>
+            <ul class="mob-menu-list">
+              <li class="mob-menu-list__item">
+                <a href="../index.html" class="mob-menu-list__link">Студия</a>
+              </li>
+              <li class="mob-menu-list__item">
+                <a href="./portfolio.html" class="mob-menu-list__link"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mob-menu-list__item">
+                <a href="" class="mob-menu-list__link">Контакты</a>
+              </li>
+            </ul>
+            <div class="mob-menu-bottom">
+              <ul class="mob-menu-contacts list">
+                <li class="mob-menu-contacts__item">
+                  <a
+                    href=""
+                    class="mob-menu-contacts__link mob-menu-contacts__link_size_big"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+                <li class="mob-menu-contacts__item">
+                  <a
+                    href=""
+                    class="mob-menu-contacts__link mob-menu-contacts__link_size_small"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+              <ul class="mob-menu-social list">
+                <li class="mob-menu-social__item">
+                  <a href="" class="mob-menu-social__link">Instagram</a>
+                </li>
+                <li class="mob-menu-social__item">
+                  <a href="" class="mob-menu-social__link">Twitter</a>
+                </li>
+                <li class="mob-menu-social__item">
+                  <a href="" class="mob-menu-social__link">Facebook</a>
+                </li>
+                <li class="mob-menu-social__item">
+                  <a href="" class="mob-menu-social__link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <!--основной контент-->
-    <section class="portfolio" data-aos="fade-down-left">
+    <section class="portfolio">
       <div class="container">
         <h2 hidden>навигационные кнопки</h2>
         <ul class="services">
@@ -279,7 +338,7 @@
       </div>
     </section>
     <!-- футер -->
-    <footer data-aos="fade-down-left">
+    <footer>
       <div class="container">
              <div class="footer-section">
           <a href="/" class="logo__footer"
