--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     /> -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./style/main.min.css" />
   </head>
   <body>
@@ -127,7 +127,7 @@
         </div>
       </section>
       <!-- почему мы -->
-     <section class="benefits" >
+      <section class="benefits">
         <div class="container">
           <h2 class="benefits__uptitle visually-hidden">Почему мы</h2>
           <ul class="benefits__list">
@@ -180,9 +180,9 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
       <!-- чем мы занимаемся -->
-      <section class="work" >
+      <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -190,30 +190,44 @@
               <div class="work__text__posicion">
                 <h3 class="work__text">Десктопні додатки</h3>
               </div>
-             <img src="./img/tablet.jpg" alt="">
+              <picture>
+               <source srcset="./img/desktop/desk-desktop@1x.webp 1x, ./img/desktop/desk-desktop@2x.webp 2x "  media="(min-width:1200px)">
+               <img src="./img/tablet.jpg" alt="" />
+              </picture>
             </li>
             <li class="work__item">
               <div class="work__text__posicion">
                 <h3 class="work__text">Мобільні додатки</h3>
               </div>
-             <img src="./img/tel.jpg" alt="">
+              <picture>
+                <source srcset="./img/desktop/phone-desktop@1x.webp 1x, ./img/desktop/phone-desktop@2x.webp 2x " media="(min-width:1200px)">
+                <img src="./img/tel.jpg" alt="" />
+              </picture>
             </li>
             <li class="work__item">
               <div class="work__text__posicion">
                 <h3 class="work__text">Дизайнерські рішення</h3>
               </div>
-              <img src="./img/tablet.jpg" alt="">
+              <picture>
+                <source srcset="./img/desktop/tablet-desktop@1x.webp 1x, ./img/desktop/tablet-desktop@2x.webp 2x" media="(min-width:1200px)">
+                <img src="./img/tablet.jpg" alt="" />
+              </picture>
             </li>
           </ul>
         </div>
       </section>
       <!-- наша команда -->
-      <section class="team" >
+      <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <img src="./img/igor.jpg" alt="">
+              <picture>
+                <source srcset="./img/desktop/igor-desktop@1x.jpg 1x, ./img/desktop/igor-desktop@2x.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./img/tablet/igor-tablet@1x.webp 1x, ./img/tablet/igor-tablet@2x.webp 2x" media="(min-width:768px)">
+                <source srcset="./img/mobile/igor-mobile@1x.webp 1x, ./img/mobile/igor-mobile@2x.webp 2x" media="(max-width:767px)">
+              <img src="./img/igor.jpg" alt="igor" class="team__photo" />
+            </picture>
               <div class="team__card">
                 <h3 class="team__name">Ігор Дем'яненко</h3>
                 <p class="team__function">Product Designer</p>
@@ -221,9 +235,7 @@
                   <li class="social__item">
                     <a href="#" class="social__link">
                       <svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -237,18 +249,14 @@
                   <li class="social__item">
                     <a href="#" class="social__link">
                       <svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
                     <a href="#" class="social__link">
                       <svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -256,11 +264,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__photo"
-                src="./img/olya.jpg"
-                alt="frontend-developer"
-              />
+              <picture>
+                <source srcset="./img/desktop/olga-destop@1x.webp 1x, ./img/desktop/olga-destop@2x.webp 2x " media="(min-width:1200px)">
+                <source srcset="./img/tablet/olga-tablet@1x.webp 1x, ./img/tablet/olga-tablet@2x.webp 2x" media="(min-width:768px)">
+                <source srcset="./img/mobile/olga-mobile@1x.webp 1x, ./img/mobile/olga-mobile@2x.webp 2x" media="(max-width:767px)">
+                     <img src="./img/olya.jpg" alt="olya" class="team__photo">
+                      </picture>
               <div class="team__card">
                 <h3 class="team__name">Ольга Рєпіна</h3>
                 <p class="team__function">Frontend Developer</p>
@@ -268,9 +277,7 @@
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -284,18 +291,14 @@
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -303,11 +306,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__photo"
-                src="./img/mikola.jpg"
-                alt="marketing"
-              />
+               <picture>
+              <source srcset="./img/desktop/mikola-desktop@1x.webp 1x, ./img/desktop/mikola-desktop@2x.webp 2x" media="(min-width:1200px)">
+              <source srcset="./img/tablet/mikola-tablet@1x.webp 1x, ./img/tablet/mikola-tablet@2x.webp 2x" media="(min-width:768px)">
+              <source srcset="./img/mobile/mikola-mobile@1x.webp 1x, ./img/mobile/mikola-mobile@2x.webp 2x" media="(max-width:767px)">
+              <img src="./img/mikola.jpg" alt="mukola" class="team__photo" />
+            </picture>
               <div class="team__card">
                 <h3 class="team__name">Микола Тарасов</h3>
                 <p class="team__function">Marketing</p>
@@ -315,9 +319,7 @@
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -331,18 +333,14 @@
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -350,12 +348,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img
-                class="team__photo"
-                src="./img/mihailo.jpg"
-                alt="ui-designer"
-                width="270"
-              />
+              <picture>
+                <source srcset="./img/desktop/mihailo-desktop@1x.webp 1x, ./img/desktop/mihailo-desktop@2x.webp 2x" media="(min-width:1200px)">
+                <source srcset="./img/tablet/mihailo-tablet@1x.webp 1x, ./img/tablet/mihailo-tablet@2x.webp 2x" media="(min-width:768px)">
+                <source srcset="./img/mobile/mihailo-mobile@1x.webp 1x, ./img/mobile/mihailo-mobile@2x.webp 2x" media="(max-width:767px)">
+                <img src="./img/mihailo.jpg" alt="michael" class="team__photo" />
+              </picture>
               <div class="team__card">
                 <h3 class="team__name">Михайло Єрмаков</h3>
                 <p class="team__function">UI Designer</p>
@@ -363,9 +361,7 @@
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -379,18 +375,14 @@
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
                     <a href="#" class="social__link"
                       ><svg class="social__icon" width="20" height="20">
-                        <use
-                          href="./img/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -399,10 +391,10 @@
             </li>
           </ul>
         </div>
-      </section> 
- 
-       <!-- наши клиенты  -->
- <section class="clients" >
+      </section>
+
+      <!-- наши клиенты  -->
+      <section class="clients">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
@@ -451,9 +443,9 @@
           </ul>
         </div>
       </section>
-    </main> 
+    </main>
     <!-- подвал -->
-    <footer >
+    <footer>
       <div class="container">
         <div class="footer-section">
           <a href="/" class="logo__footer"
@@ -530,7 +522,7 @@
       </div>
     </footer>
     <!-- модальное окно -->
-  <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <p class="modal__description">Залиште свої дані, ми вам передзвонимо</p>
         <form class="modal__form">
@@ -594,8 +586,8 @@
           </svg>
         </button>
       </div>
-    </div> 
-<script src="./js/modal-header.js"></script>
+    </div>
+    <script src="./js/modal-header.js"></script>
     <script src="./js/modal.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
