--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
               <svg class="contacts__icon" width="16" height="12">
-                <use href="./img/symbol-defs.svg#icon-envelope-1"></use>
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
               </svg>
               <span class="contacts__text">info@devstudio.com</span>
             </a>
